# glink

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanfile.txt  go.mod  go.sum  run_in_tmux.sh  tasks.todo  todo.md
cmd/: main.go  tui.go  tui_log.go
pkg/: commands.go  database.go  database_test.go  discovery.go  encode.go  server.go  service.go  service_test.go  utils.go
src/lib/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  database.cpp  database.h  engine.cpp  message.h  message_queue.h  network.cpp  server.cpp  server.h  utils.cpp
src/lib/discovery/: discovery_service.cpp  local_broadcaster.cpp  local_broadcaster.h  local_receiver.cpp  local_receiver.h
src/lib/include/: discovery_service.h  engine.h  network.h  utils.h
src/lib/tests/: CMakeLists.txt  mq_test.cpp
